# coursers

./: .gitignore  .health-baseline.json  AGENTS.md  CLAUDE.md  Cargo.toml  HANDOFF.coursers.workspace.yaml  README.md  justfile  rustqual.toml
.claude-plugin/: plugin.json
.codex/: config.toml
.codex/agents/: coursers-companion.toml
.codex/skills/coursers-maintain/: SKILL.md
.codex/skills/coursers-maintain/agents/: openai.yaml
.config/: rail.toml
.config/crs/plugins.d/: godmode.toml
.ctx/: HANDOFF.agent-improvement.coursers.yaml  HANDOFF.coursers.coursers.yaml  HANDOFF.md  HANDOFF.state.yaml  HANDOFF.tools.yaml
.kgx/data/: documents.json  graph.json
.kgx/wiki/: index.md  log.md
.kgx/wiki/summary/: hook-pipeline-architecture.md
agents/: INDEX.md  coursers-companion.md
config/: course-correct-rules.example.json
crates/core/: Cargo.toml
crates/core/src/: ast.rs  capture.rs  config.rs  date.rs  error.rs  expand.rs  filters.rs  heat.rs  history.rs  insights.rs  jsonl_source.rs  lib.rs  loader.rs  obfsck.rs  pipeline.rs  replay.rs  rewrite.rs  rtk.rs  rules.rs  rx_prefix.rs  state.rs  store.rs  suggest.rs  testing.rs  tool_swap.rs
crates/core/src/analyze/: capture.rs  heat.rs  history.rs  insights.rs  mod.rs  stats.rs  suggest.rs
crates/core/src/hook/: filter_logic.rs  filters.rs  log.rs  mod.rs  pipeline.rs  protocol.rs  tool_swap.rs
crates/core/src/parse/: ast.rs  expand.rs  mod.rs  pipeline.rs
crates/core/tests/: conformance_capture_store.rs  conformance_command_source.rs  conformance_obfsck_mcp.rs  conformance_rtk_analysis.rs  conformance_rtk_rewrite.rs  conformance_rules_loader.rs  conformance_state_store.rs  conformance_stats_store.rs  conformance_var_expander.rs  property_tests.rs
crates/coursers/: Cargo.toml
crates/coursers/src/: crs_commands.rs  main.rs
crates/coursers/src/hook/: mod.rs  post.rs  pre.rs
crates/coursers/src/nu_check/: mod.rs
crates/coursers/tests/: common.rs  discover_integration.rs  filter_integration.rs  post_hook.rs  pre_hook.rs  rewrite_integration.rs
crates/crs/: Cargo.toml
crates/crs/src/: jsonl_source.rs  lib.rs  main.rs
crates/crs/src/nu_check/: mod.rs
crates/crs/src/obfsck/: mod.rs  process.rs
crates/crs/src/rtk/: mod.rs  process.rs
crates/crs/tests/: common_bin.rs  discover_integration.rs  filter_binary.rs  filter_integration.rs  nu_check_binary.rs  rewrite_binary.rs  rewrite_integration.rs  validate_binary.rs
crates/crs/tests/fixtures/discover/: session.jsonl
crates/e2e/: Cargo.toml
crates/e2e/fixtures/scenarios/: cargo-test-filtered.toml  grep-blocked.toml  learned-failure-blocks.toml  ls-allowed.toml
crates/e2e/tests/: pipeline.rs  scenarios.rs
crates/types/: Cargo.toml
crates/types/src/: capture.rs  config.rs  filters.rs  history.rs  hook.rs  lib.rs  obfsck.rs  pipeline.rs  ports.rs  rtk.rs  rules.rs  state.rs  stats.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
docs/: codex-profile.md
docs/designs/: 2026-06-24-codex-profile-isolation-design.md  2026-06-28-workspace-consolidation-design.md
docs/plans/: 2026-05-30-rustqual-55-findings.md  2026-06-09-e2e-tests.md  2026-06-24-codex-profile-isolation.md  2026-06-28-workspace-consolidation.md  godmode-integration.md  hook-composition.md  shared-trait-extraction.md
docs/superpowers/plans/: 2026-04-06-crs-discover.md  2026-04-06-handoff-tool-usage-enrichment.md  2026-04-06-test-harness.md  2026-04-12-coursers-11-obfsck-filters.md  2026-04-16-rx-prefix-integration.md
docs/superpowers/specs/: 2026-04-06-crs-discover-design.md  2026-04-06-handoff-tool-usage-enrichment-design.md  2026-04-06-test-harness-design.md
fuzz/: Cargo.toml
fuzz/corpus/fuzz_expand/: brace_var  dollar_var  nu_env  tilde  url_skip
fuzz/corpus/fuzz_pipeline/: or_or  pipe  quoted_ops
fuzz/fuzz_targets/: fuzz_ast_parse.rs  fuzz_expand.rs  fuzz_jsonl_parse.rs  fuzz_pipe_stages.rs  fuzz_pipeline.rs  fuzz_rule_check.rs
hooks/: post-tool-track-failures.nu  pre-tool-course-correct.nu
schemas/: crs-hooks.schema.json
scripts/: enrich-handoff.jq  enrich-handoff.nu  enrich-handoff.sh  smoke.nu  test-enrich-handoff-jq.sh  test-enrich-handoff.sh
src/: main.rs  state.rs
src/hook/: post.rs  pre.rs
tests/integration/fixtures/: payload_bash_grep.json  payload_bash_ls.json  payload_non_bash.json  payload_post_fail.json  payload_post_ok.json  payload_post_signal.json  rules_basic.json  rules_empty.json
