[workspace]
members = [
    "crates/core",
    "crates/coursers",
    "crates/crs",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/89jobrien/coursers"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
sha2 = "0.10"
hex = "0.4"
dirs = "5"
tempfile = "3"
toml = "0.8"
walkdir = "2"

[profile.release]
strip = true
opt-level = "z"
lto = true
