[package]
name = "crs-core-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.crs-core]
path = "../crates/core"

[dependencies.crs-lib]
package = "crs"
path = "../crates/crs"

# Prevent this from being discovered as a workspace member
[workspace]

[[bin]]
name = "fuzz_ast_parse"
path = "fuzz_targets/fuzz_ast_parse.rs"
doc = false

[[bin]]
name = "fuzz_pipeline"
path = "fuzz_targets/fuzz_pipeline.rs"
doc = false

[[bin]]
name = "fuzz_expand"
path = "fuzz_targets/fuzz_expand.rs"
doc = false

[[bin]]
name = "fuzz_pipe_stages"
path = "fuzz_targets/fuzz_pipe_stages.rs"
doc = false

[[bin]]
name = "fuzz_rule_check"
path = "fuzz_targets/fuzz_rule_check.rs"
doc = false

[[bin]]
name = "fuzz_jsonl_parse"
path = "fuzz_targets/fuzz_jsonl_parse.rs"
doc = false
