[package]
name = "crs-core"
description = "Shared config, rules, and state for coursers and crs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
testing = []

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
dirs = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
toml = { workspace = true }
tempfile = { workspace = true }
shell-words = { workspace = true }
serde_yaml = "0.9"
