[package]
name = "crs-core"
description = "Shared config, rules, and state for coursers and crs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"
doctest = false


[features]
testing = []

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
dirs = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
toml = { workspace = true }
tempfile = { workspace = true }
shell-words = { workspace = true }
prefixe = { workspace = true }
fd-lock = { workspace = true }
redb = { workspace = true }
serde-saphyr = "0.0.23"

[lints]
workspace = true

[dev-dependencies]
proptest = "1"

[[test]]
name = "conformance_capture_store"
required-features = ["testing"]

[[test]]
name = "conformance_state_store"
required-features = ["testing"]

[[test]]
name = "conformance_rules_loader"
required-features = ["testing"]

[[test]]
name = "conformance_command_source"
required-features = ["testing"]

[[test]]
name = "conformance_var_expander"

[[test]]
name = "conformance_obfsck_mcp"

[[test]]
name = "conformance_rtk_analysis"

[[test]]
name = "conformance_rtk_rewrite"
