[package]
name = "coursers"
description = "Claude Code PreToolUse/PostToolUse hook — command blocking and failure learning"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "coursers"
path = "src/main.rs"

[[bin]]
name = "crs"
path = "src/main.rs"

[dependencies]
chrono = { workspace = true }
clap = { workspace = true }
coursers-types = { workspace = true }
coursers-core = { workspace = true }
dirs = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shell-words = { workspace = true }
toml = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
coursers-core = { workspace = true, features = ["testing"] }
serde_json = { workspace = true }
tempfile = { workspace = true }
