[package]
name = "crs"
description = "Command rewriter and output filter — RTK replacement"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "crs"
path = "src/main.rs"

[dependencies]
crs-core = { path = "../core" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
