[package]
name = "crs"
description = "Command rewriter and output filter — RTK replacement"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "crs_lib"
path = "src/lib.rs"

[[bin]]
name = "crs"
path = "src/main.rs"

[dependencies]
crs-core = { path = "../core" }
clap = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
walkdir = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
