[package]
name = "crs"
description = "Command rewriter and output filter — RTK replacement"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "crs_lib"
path = "src/lib.rs"

[[bin]]
name = "crs"
path = "src/main.rs"

[dependencies]
chrono = { workspace = true }
clap = { workspace = true }
coursers-core = { workspace = true }
dirs = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shell-words = { workspace = true }
toml = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[[test]]
name = "nu_check_binary"
path = "tests/nu_check_binary.rs"
