[package]
name = "coursers-e2e"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "e2e-placeholder"
path = "src/main.rs"

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tempfile = { workspace = true }
