[package]
name = "coursers-types"
description = "Domain types and port traits for the coursers workspace"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"
doctest = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
